--- a/modelo-env.yml
+++ b/modelo-env.yml
@@ -148,6 +148,10 @@ DATABASE:
 
 
 
+# REDIS é um banco super rápido que ajuda a não dar erros nos envios das mensagens,
+# recomendamos deixar habilitado,
+# caso a instalação da sua api seja antes de junho/23, instale o REDIS com o comando:
+# sudo apt-get install redis-server -y
 REDIS:
   ENABLED: true
   URI: redis://127.0.0.1:6379
