--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
 	"name": "uazapi",
-	"version": "4.0.0",
+	"version": "4.0.0 - beta",
 	"description": "API para WhatsApp",
 	"scripts": {
-		"prestart": "git fetch && git reset --hard && git pull && npm install --unsafe-perm",
 		"start": "node uazapi.js"
 	},
 	"dependencies": {
